[package]
name = "decker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
whoami = "1.2.3"
ssh2 = "0.9.3"
serde_json = "1.0.85"
serde = { version = "1.0.144", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
openssl = { version = "0.10", features = ["vendored"] }
clap = { version = "3.2.21", features = ["derive"] }
ssh-key = { version = "0.4.2", features = ["rsa", "rand_core"] }
rand_core = { version = "0.6.3", features = ["getrandom"] }

