[package]
name = "decker"
version = "0.1.0"
edition = "2021"
authors = ["Patrik M. Rosenström <patrik.millvik@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.85"
serde = { version = "1.0.144", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = { version = "3.2.21", features = ["derive"] }
mktemp = "0.4.1"
