[package]
name = "decker_util"
version = "0.1.0"
edition = "2021"
authors = ["Patrik M. Rosenström <patrik.millvik@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "3.0.0"
serde_json = "1.0.85"
serde = { version = "1.0.144", features = ["derive"] }
clap = { version = "4.0.9", features = ["derive"] }
vdf = { path = "../vdf" }
